--- a/perfumes.html
+++ b/perfumes.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perfumes - EREBUS</title>
   <style>
+    :root {
+      --color-primary: #000;
+      --color-background: #fff;
+    }
+
     * {
       margin: 0;
       padding: 0;
@@ -13,24 +18,51 @@
 
     body {
       font-family: Arial, sans-serif;
-      background-color: #fff;
+      background-color: var(--color-background);
       color: #333;
       overflow-x: hidden;
+      padding-top: 70px; /* espacio para header fijo */
     }
 
+    /* HEADER FIJO */
     header {
-      background-color: #000;
-      color: #fff;
-      padding: 15px 20px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: var(--color-primary);
+      color: var(--color-background);
+      z-index: 1000;
+      transition: all 0.3s ease;
       display: flex;
-      align-items: center;
       justify-content: space-between;
+      align-items: center;
+      padding: 10px 20px;
       flex-wrap: wrap;
     }
 
-    header img {
-      height: 40px;
+    .logo-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 70px;
+      overflow: hidden;
+      transition: all 0.3s;
+    }
+
+    .logo-container img {
+      height: 50px;
       margin-right: 10px;
+    }
+
+    .logo-container h1 {
+      font-size: 1.8rem;
+      color: #fff;
+    }
+
+    .header-hidden .logo-container {
+      height: 0;
+      transform: translateY(-100%);
     }
 
     nav ul {
@@ -60,7 +92,7 @@
     h1 {
       text-align: center;
       margin-bottom: 40px;
-      margin-top: 30px;
+      margin-top: 0;
     }
 
     /* GRID RESPONSIVE */
@@ -135,9 +167,9 @@
 </head>
 <body>
   <header>
-    <div style="display: flex; align-items: center;">
+    <div class="logo-container">
       <img src="images/LOGOE.png" alt="Logo EREBUS">
-      <h2>EREBUS</h2>
+      <h1>EREBUS</h1>
     </div>
     <nav>
       <ul>
