--- a/perfumes.html
+++ b/perfumes.html
@@ -5,168 +5,93 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perfumes - EREBUS</title>
   <style>
-    :root {
-      --color-primary: #000;
-      --color-background: #fff;
+    :root{
+      --color-primary:#000;
+      --color-background:#fff;
+      --color-accent:#e0e0e0;
+      --color-text:#333;
+      --font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    *{box-sizing:border-box;margin:0;padding:0}
+    body{font-family:var(--font-family);background:var(--color-background);color:var(--color-text);line-height:1.6;padding-top:70px; /* espacio para header fijo */}
 
-    body {
-      font-family: Arial, sans-serif;
-      background-color: var(--color-background);
-      color: #333;
-      overflow-x: hidden;
-      padding-top: 70px; /* espacio para header fijo */
+    /* HEADER */
+    header{
+      position:fixed;
+      top:0;
+      left:0;
+      width:100%;
+      background:var(--color-primary);
+      color:var(--color-background);
+      z-index:1000;
+      transition:all .3s ease;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      flex-wrap:wrap;
+      padding:10px 20px;
     }
+    .logo-container{
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      height:70px;
+      overflow:hidden;
+      transition:all .3s;
+    }
+    .logo-container img{height:50px;margin-right:10px}
+    .logo-container h1{font-size:1.8rem;color:#fff}
+    .header-hidden .logo-container{height:0;transform:translateY(-100%)}
 
-    /* HEADER FIJO */
-    header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background: var(--color-primary);
-      color: var(--color-background);
-      z-index: 1000;
-      transition: all 0.3s ease;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 20px;
-      flex-wrap: wrap;
+    /* NAV */
+    nav ul{
+      list-style:none;
+      display:flex;
+      justify-content:center;
+      gap:20px;
+      background:var(--color-primary);
+      padding:10px 0;
+      flex-wrap:wrap;
     }
+    nav a{color:var(--color-background);text-decoration:none;font-weight:500}
+    nav a:hover{color:var(--color-accent)}
 
-    .logo-container {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 70px;
-      overflow: hidden;
-      transition: all 0.3s;
-    }
+    /* PERFUMES GRID */
+    main{padding:40px 20px;max-width:1400px;margin:0 auto}
+    h1{text-align:center;margin-bottom:40px;margin-top:0}
 
-    .logo-container img {
-      height: 50px;
-      margin-right: 10px;
+    .perfumes{
+      display:grid;
+      gap:20px;
+      justify-items:center;
+      grid-template-columns:repeat(5,1fr);
     }
+    @media(max-width:1024px){.perfumes{grid-template-columns:repeat(3,1fr)}}
+    @media(max-width:768px){.perfumes{grid-template-columns:repeat(2,1fr)}}
 
-    .logo-container h1 {
-      font-size: 1.8rem;
-      color: #fff;
+    .perfume{
+      background:#fff;
+      border:1px solid var(--color-accent);
+      border-radius:10px;
+      padding:15px;
+      text-align:center;
+      transition:transform .2s,box-shadow .2s;
+      width:100%;
+      max-width:220px;
     }
+    .perfume:hover{transform:translateY(-5px);box-shadow:0 4px 10px rgba(0,0,0,.15)}
+    .perfume img{width:100%;height:auto;border-radius:8px}
+    .perfume h3{margin:10px 0 5px;font-size:1.1rem}
+    .perfume p{margin:5px 0;font-size:0.9rem;color:#666}
+    .perfume .price{font-weight:bold;margin-top:10px;font-size:1rem;color:#000}
 
-    .header-hidden .logo-container {
-      height: 0;
-      transform: translateY(-100%);
-    }
-
-    nav ul {
-      list-style: none;
-      display: flex;
-      margin: 0;
-      padding: 0;
-      flex-wrap: wrap;
-    }
-
-    nav ul li {
-      margin-left: 20px;
-    }
-
-    nav ul li a {
-      text-decoration: none;
-      color: #fff;
-      font-weight: bold;
-    }
-
-    main {
-      padding: 40px 20px;
-      max-width: 1400px;
-      margin: 0 auto;
-    }
-
-    h1 {
-      text-align: center;
-      margin-bottom: 40px;
-      margin-top: 0;
-    }
-
-    /* GRID RESPONSIVE */
-    .perfumes {
-      display: grid;
-      gap: 20px;
-      justify-items: center;
-      grid-template-columns: repeat(5, 1fr); /* PC por defecto */
-    }
-
-    @media (max-width: 1024px) {
-      .perfumes {
-        grid-template-columns: repeat(3, 1fr); /* Tablet */
-      }
-    }
-
-    @media (max-width: 768px) {
-      .perfumes {
-        grid-template-columns: repeat(2, 1fr); /* Celular */
-      }
-    }
-
-    .perfume {
-      background: #fff;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      padding: 15px;
-      text-align: center;
-      transition: transform 0.2s, box-shadow 0.2s;
-      width: 100%;
-      max-width: 220px;
-    }
-
-    .perfume:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-    }
-
-    .perfume img {
-      width: 100%;
-      height: auto;
-      border-radius: 8px;
-    }
-
-    .perfume h3 {
-      margin: 10px 0 5px;
-      font-size: 1.1rem;
-    }
-
-    .perfume p {
-      margin: 5px 0;
-      font-size: 0.9rem;
-      color: #666;
-    }
-
-    .perfume .price {
-      font-weight: bold;
-      margin-top: 10px;
-      font-size: 1rem;
-      color: #000;
-    }
-
-    footer {
-      background-color: #000;
-      color: #fff;
-      text-align: center;
-      padding: 15px 10px;
-      margin-top: 40px;
-      width: 100%;
-    }
+    /* FOOTER */
+    footer{background:var(--color-primary);color:var(--color-background);text-align:center;padding:15px 10px;margin-top:40px;width:100%}
   </style>
 </head>
 <body>
-  <header>
+  <header id="mainHeader">
     <div class="logo-container">
       <img src="images/LOGOE.png" alt="Logo EREBUS">
       <h1>EREBUS</h1>
@@ -238,5 +163,17 @@
   <footer>
     <p>© 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
   </footer>
+
+  <script>
+    // Ocultar header al hacer scroll
+    const header = document.getElementById('mainHeader');
+    let lastY = 0;
+    window.addEventListener('scroll', ()=>{
+      const y = window.pageYOffset || document.documentElement.scrollTop;
+      if(y > lastY && y > 50) header.classList.add('header-hidden'); 
+      else header.classList.remove('header-hidden');
+      lastY = y <= 0 ? 0 : y;
+    });
+  </script>
 </body>
 </html>
