--- a/perfumes.html
+++ b/perfumes.html
@@ -1,179 +1,176 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Perfumes - EREBUS</title>
-  <style>
-    :root{
-      --color-primary:#000;
-      --color-background:#fff;
-      --color-accent:#e0e0e0;
-      --color-text:#333;
-      --font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Perfumes - EREBUS</title>
+<style>
+:root{
+  --color-primary:#000;
+  --color-background:#fff;
+  --color-accent:#e0e0e0;
+  --color-text:#333;
+  --font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
-    *{box-sizing:border-box;margin:0;padding:0}
-    body{font-family:var(--font-family);background:var(--color-background);color:var(--color-text);line-height:1.6;padding-top:70px; /* espacio para header fijo */}
+/* Reset */
+*{box-sizing:border-box;margin:0;padding:0}
+body{font-family:var(--font-family);background:var(--color-background);color:var(--color-text);line-height:1.6;padding-top:150px}
 
-    /* HEADER */
-    header{
-      position:fixed;
-      top:0;
-      left:0;
-      width:100%;
-      background:var(--color-primary);
-      color:var(--color-background);
-      z-index:1000;
-      transition:all .3s ease;
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      flex-wrap:wrap;
-      padding:10px 20px;
-    }
-    .logo-container{
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      height:70px;
-      overflow:hidden;
-      transition:all .3s;
-    }
-    .logo-container img{height:50px;margin-right:10px}
-    .logo-container h1{font-size:1.8rem;color:#fff}
-    .header-hidden .logo-container{height:0;transform:translateY(-100%)}
+/* HEADER CENTRADO */
+header{
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  background:var(--color-primary);
+  color:var(--color-background);
+  z-index:1000;
+  transition:all .3s ease;
+  text-align:center;
+}
+.logo-container{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  height:120px;
+  transition:all .3s;
+}
+.logo-container img{height:60px;margin-bottom:10px}
+.logo-container h1{font-size:2rem;color:#fff;margin-bottom:5px}
+.header-hidden .logo-container{height:0;transform:translateY(-100%)}
 
-    /* NAV */
-    nav ul{
-      list-style:none;
-      display:flex;
-      justify-content:center;
-      gap:20px;
-      background:var(--color-primary);
-      padding:10px 0;
-      flex-wrap:wrap;
-    }
-    nav a{color:var(--color-background);text-decoration:none;font-weight:500}
-    nav a:hover{color:var(--color-accent)}
+/* NAV debajo del logo */
+nav ul{
+  list-style:none;
+  display:flex;
+  justify-content:center;
+  gap:30px;
+  padding:10px 0;
+  background:var(--color-primary);
+  flex-wrap:wrap;
+}
+nav a{color:var(--color-background);text-decoration:none;font-weight:500;font-size:1rem}
+nav a:hover{color:var(--color-accent)}
 
-    /* PERFUMES GRID */
-    main{padding:40px 20px;max-width:1400px;margin:0 auto}
-    h1{text-align:center;margin-bottom:40px;margin-top:0}
+/* PERFUMES GRID */
+main{padding:40px 20px;max-width:1400px;margin:0 auto;text-align:center}
+h1{margin-bottom:40px;margin-top:0}
 
-    .perfumes{
-      display:grid;
-      gap:20px;
-      justify-items:center;
-      grid-template-columns:repeat(5,1fr);
-    }
-    @media(max-width:1024px){.perfumes{grid-template-columns:repeat(3,1fr)}}
-    @media(max-width:768px){.perfumes{grid-template-columns:repeat(2,1fr)}}
+/* Grid responsivo 5/3/2 */
+.perfumes{
+  display:grid;
+  gap:20px;
+  justify-items:center;
+  grid-template-columns:repeat(5,1fr);
+}
+@media(max-width:1024px){.perfumes{grid-template-columns:repeat(3,1fr)}}
+@media(max-width:768px){.perfumes{grid-template-columns:repeat(2,1fr)}}
 
-    .perfume{
-      background:#fff;
-      border:1px solid var(--color-accent);
-      border-radius:10px;
-      padding:15px;
-      text-align:center;
-      transition:transform .2s,box-shadow .2s;
-      width:100%;
-      max-width:220px;
-    }
-    .perfume:hover{transform:translateY(-5px);box-shadow:0 4px 10px rgba(0,0,0,.15)}
-    .perfume img{width:100%;height:auto;border-radius:8px}
-    .perfume h3{margin:10px 0 5px;font-size:1.1rem}
-    .perfume p{margin:5px 0;font-size:0.9rem;color:#666}
-    .perfume .price{font-weight:bold;margin-top:10px;font-size:1rem;color:#000}
+.perfume{
+  background:#fff;
+  border:1px solid var(--color-accent);
+  border-radius:10px;
+  padding:15px;
+  text-align:center;
+  transition:transform .2s,box-shadow .2s;
+  width:100%;
+  max-width:220px;
+}
+.perfume:hover{transform:translateY(-5px);box-shadow:0 4px 10px rgba(0,0,0,.15)}
+.perfume img{width:100%;height:auto;border-radius:8px}
+.perfume h3{margin:10px 0 5px;font-size:1.1rem}
+.perfume p{margin:5px 0;font-size:0.9rem;color:#666}
+.perfume .price{font-weight:bold;margin-top:10px;font-size:1rem;color:#000}
 
-    /* FOOTER */
-    footer{background:var(--color-primary);color:var(--color-background);text-align:center;padding:15px 10px;margin-top:40px;width:100%}
-  </style>
+/* FOOTER */
+footer{background:var(--color-primary);color:var(--color-background);text-align:center;padding:15px 10px;margin-top:40px;width:100%}
+</style>
 </head>
 <body>
-  <header id="mainHeader">
-    <div class="logo-container">
-      <img src="images/LOGOE.png" alt="Logo EREBUS">
-      <h1>EREBUS</h1>
+<header id="mainHeader">
+  <div class="logo-container">
+    <img src="images/LOGOE.png" alt="Logo EREBUS">
+    <h1>EREBUS</h1>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="index.html#ropa">Ropa</a></li>
+      <li><a href="perfumes.html">Perfumes</a></li>
+      <li><a href="index.html#contacto">Contacto</a></li>
+    </ul>
+  </nav>
+</header>
+
+<main>
+  <h1>Nuestros Perfumes</h1>
+  <div class="perfumes">
+    <div class="perfume">
+      <img src="images/PERFUME1.png" alt="Perfume 120ML">
+      <h3>Perfume 120ML</h3>
+      <p>Aroma fresco y duradero.</p>
+      <p class="price">$299.00</p>
     </div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="index.html#ropa">Ropa</a></li>
-        <li><a href="perfumes.html">Perfumes</a></li>
-        <li><a href="index.html#contacto">Contacto</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <h1>Nuestros Perfumes</h1>
-    <div class="perfumes">
-      <div class="perfume">
-        <img src="images/PERFUME1.png" alt="Perfume 120ML">
-        <h3>Perfume 120ML</h3>
-        <p>Aroma fresco y duradero.</p>
-        <p class="price">$299.00</p>
-      </div>
-      <div class="perfume">
-        <img src="images/PERFUME1.png" alt="Perfume 120ML - Edición">
-        <h3>Perfume 120ML - Edición</h3>
-        <p>Aroma elegante y sofisticado.</p>
-        <p class="price">$350.00</p>
-      </div>
-      <div class="perfume">
-        <img src="images/PERFUME1.png" alt="Perfume 60ML">
-        <h3>Perfume 60ML</h3>
-        <p>Fragancia amaderada única.</p>
-        <p class="price">$199.00</p>
-      </div>
-      <div class="perfume">
-        <img src="images/PERFUME1.png" alt="Perfume 50ML">
-        <h3>Perfume 50ML</h3>
-        <p>Notas florales suaves.</p>
-        <p class="price">$180.00</p>
-      </div>
-      <div class="perfume">
-        <img src="images/PERFUME1.png" alt="Perfume 30ML">
-        <h3>Perfume 30ML</h3>
-        <p>Compacto y fresco para el día.</p>
-        <p class="price">$150.00</p>
-      </div>
-      <div class="perfume">
-        <img src="images/PERFUME1.png" alt="Perfume 250ML">
-        <h3>Perfume 250ML</h3>
-        <p>Fragancia intensa y duradera.</p>
-        <p class="price">$450.00</p>
-      </div>
-      <div class="perfume">
-        <img src="images/PERFUME1.png" alt="Set Miniaturas">
-        <h3>Set Miniaturas</h3>
-        <p>3 miniaturas para probar.</p>
-        <p class="price">$120.00</p>
-      </div>
-      <div class="perfume">
-        <img src="images/PERFUME1.png" alt="Edición Limitada">
-        <h3>Edición Limitada</h3>
-        <p>Notas exclusivas y sofisticadas.</p>
-        <p class="price">$599.00</p>
-      </div>
+    <div class="perfume">
+      <img src="images/PERFUME1.png" alt="Perfume 120ML - Edición">
+      <h3>Perfume 120ML - Edición</h3>
+      <p>Aroma elegante y sofisticado.</p>
+      <p class="price">$350.00</p>
     </div>
-  </main>
+    <div class="perfume">
+      <img src="images/PERFUME1.png" alt="Perfume 60ML">
+      <h3>Perfume 60ML</h3>
+      <p>Fragancia amaderada única.</p>
+      <p class="price">$199.00</p>
+    </div>
+    <div class="perfume">
+      <img src="images/PERFUME1.png" alt="Perfume 50ML">
+      <h3>Perfume 50ML</h3>
+      <p>Notas florales suaves.</p>
+      <p class="price">$180.00</p>
+    </div>
+    <div class="perfume">
+      <img src="images/PERFUME1.png" alt="Perfume 30ML">
+      <h3>Perfume 30ML</h3>
+      <p>Compacto y fresco para el día.</p>
+      <p class="price">$150.00</p>
+    </div>
+    <div class="perfume">
+      <img src="images/PERFUME1.png" alt="Perfume 250ML">
+      <h3>Perfume 250ML</h3>
+      <p>Fragancia intensa y duradera.</p>
+      <p class="price">$450.00</p>
+    </div>
+    <div class="perfume">
+      <img src="images/PERFUME1.png" alt="Set Miniaturas">
+      <h3>Set Miniaturas</h3>
+      <p>3 miniaturas para probar.</p>
+      <p class="price">$120.00</p>
+    </div>
+    <div class="perfume">
+      <img src="images/PERFUME1.png" alt="Edición Limitada">
+      <h3>Edición Limitada</h3>
+      <p>Notas exclusivas y sofisticadas.</p>
+      <p class="price">$599.00</p>
+    </div>
+  </div>
+</main>
 
-  <footer>
-    <p>© 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
-  </footer>
+<footer>
+  <p>© 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
+</footer>
 
-  <script>
-    // Ocultar header al hacer scroll
-    const header = document.getElementById('mainHeader');
-    let lastY = 0;
-    window.addEventListener('scroll', ()=>{
-      const y = window.pageYOffset || document.documentElement.scrollTop;
-      if(y > lastY && y > 50) header.classList.add('header-hidden'); 
-      else header.classList.remove('header-hidden');
-      lastY = y <= 0 ? 0 : y;
-    });
-  </script>
+<script>
+const header = document.getElementById('mainHeader');
+let lastY = 0;
+window.addEventListener('scroll', ()=>{
+  const y = window.pageYOffset || document.documentElement.scrollTop;
+  if(y > lastY && y > 50) header.classList.add('header-hidden'); 
+  else header.classList.remove('header-hidden');
+  lastY = y <= 0 ? 0 : y;
+});
+</script>
 </body>
 </html>
