--- a/perfumes.html
+++ b/perfumes.html
@@ -15,9 +15,9 @@
 
 /* Reset */
 *{box-sizing:border-box;margin:0;padding:0}
-body{font-family:var(--font-family);background:var(--color-background);color:var(--color-text);line-height:1.6;padding-top:150px}
+body{font-family:var(--font-family);background:var(--color-background);color:var(--color-text);line-height:1.6;padding-top:120px}
 
-/* HEADER CENTRADO */
+/* HEADER: logo y nombre en la misma línea */
 header{
   position:fixed;
   top:0;
@@ -28,17 +28,18 @@ header{
   z-index:1000;
   transition:all .3s ease;
   text-align:center;
+  padding:10px 20px;
 }
 .logo-container{
   display:flex;
-  flex-direction:column;
   align-items:center;
   justify-content:center;
-  height:120px;
+  gap:10px;
+  height:70px;
   transition:all .3s;
 }
-.logo-container img{height:60px;margin-bottom:10px}
-.logo-container h1{font-size:2rem;color:#fff;margin-bottom:5px}
+.logo-container img{height:50px}
+.logo-container h1{font-size:2rem;color:#fff}
 .header-hidden .logo-container{height:0;transform:translateY(-100%)}
 
 /* NAV debajo del logo */
