--- a/perfumes.html
+++ b/perfumes.html
@@ -17,7 +17,7 @@
 *{box-sizing:border-box;margin:0;padding:0}
 body{font-family:var(--font-family);background:var(--color-background);color:var(--color-text);line-height:1.6;padding-top:150px}
 
-/* HEADER: logo a la izquierda, nombre centrado */
+/* --- HEADER IGUAL QUE ROPA --- */
 header{
   position:fixed;
   top:0;
@@ -27,37 +27,23 @@ header{
   color:var(--color-background);
   z-index:1000;
   transition:all .3s ease;
-  text-align:left;
-  padding:10px 20px;
 }
-.header-inner{
+.logo-container{
   display:flex;
   align-items:center;
   justify-content:center;
-  position:relative;
+  height:70px;
+  overflow:hidden;
+  transition:all .3s;
 }
-.logo-container{
-  position:absolute;
-  left:20px;
-  display:flex;
-  align-items:center;
-  height:60px;
-}
-.logo-container img{height:50px}
-.logo-container h1{font-size:1.8rem;color:#fff;margin-left:10px}
-/* Nombre centrado horizontalmente */
-.header-title{
-  position:absolute;
-  left:50%;
-  transform:translateX(-50%);
-  font-size:2rem;
-  color:#fff;
+.logo-container img{height:50px;margin-right:10px}
+.logo-container h1{font-size:1.8rem;color:#fff;}
+.header-hidden .logo-container{
+  height:0;
+  transform:translateY(-100%);
 }
 
-/* NAV debajo del logo y título */
-nav{
-  margin-top:80px; /* separa de header */
-}
+/* NAV */
 nav ul{
   list-style:none;
   display:flex;
@@ -66,10 +52,15 @@ nav ul{
   padding:10px 0;
   flex-wrap:wrap;
 }
-nav a{color:var(--color-background);text-decoration:none;font-weight:500;font-size:1rem}
+nav a{
+  color:var(--color-background);
+  text-decoration:none;
+  font-weight:500;
+  font-size:1rem;
+}
 nav a:hover{color:var(--color-accent)}
 
-/* PERFUMES GRID */
+/* MAIN PERFUMES */
 main{padding:40px 20px;max-width:1400px;margin:0 auto;text-align:center}
 h1{margin-bottom:40px;margin-top:0}
 
@@ -89,11 +80,11 @@ h1{margin-bottom:40px;margin-top:0}
   border-radius:10px;
   padding:15px;
   text-align:center;
-  transition:transform .2s,box-shadow .2s;
+  transition:transform .3s,box-shadow .3s;
   width:100%;
   max-width:220px;
 }
-.perfume:hover{transform:translateY(-5px);box-shadow:0 4px 10px rgba(0,0,0,.15)}
+.perfume:hover{transform:translateY(-5px);box-shadow:0 4px 20px rgba(0,0,0,.1)}
 .perfume img{width:100%;height:auto;border-radius:8px}
 .perfume h3{margin:10px 0 5px;font-size:1.1rem}
 .perfume p{margin:5px 0;font-size:0.9rem;color:#666}
@@ -104,13 +95,10 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 </style>
 </head>
 <body>
-<header>
-  <div class="header-inner">
-    <div class="logo-container">
-      <img src="images/LOGOE.png" alt="Logo EREBUS">
-      <h1>EREBUS</h1>
-    </div>
-    <div class="header-title">EREBUS</div>
+<header id="mainHeader">
+  <div class="logo-container">
+    <img src="images/LOGOE.png" alt="Logo EREBUS">
+    <h1>EREBUS</h1>
   </div>
   <nav>
     <ul>
@@ -179,5 +167,17 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 <footer>
   <p>© 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
 </footer>
+
+<script>
+/* --- Header hide on scroll --- */
+const header = document.getElementById('mainHeader');
+let lastY = 0;
+window.addEventListener('scroll', ()=>{
+  const y = window.pageYOffset || document.documentElement.scrollTop;
+  if(y > lastY && y > 50) header.classList.add('header-hidden'); 
+  else header.classList.remove('header-hidden');
+  lastY = y <= 0 ? 0 : y;
+});
+</script>
 </body>
 </html>
