--- a/perfumes.html
+++ b/perfumes.html
@@ -27,17 +27,19 @@ header{
   color:var(--color-background);
   z-index:1000;
   transition:all .3s ease;
+  display:flex;
+  flex-direction:column;
 }
 .logo-container{
   display:flex;
-  align-items:center; /* centra verticalmente logo y texto */
+  align-items:center; /* centra logo y texto verticalmente */
   justify-content:center;
   height:70px;
   overflow:hidden;
   transition:all .3s;
 }
 .logo-container img{height:50px;margin-right:10px}
-.logo-container h1{font-size:1.8rem;color:#fff; display:flex; align-items:center;}
+.logo-container h1{font-size:1.8rem;color:#fff; margin:0;}
 .header-hidden .logo-container{
   height:0;
   transform:translateY(-100%);
