--- a/perfumes.html
+++ b/perfumes.html
@@ -17,50 +17,34 @@
 *{box-sizing:border-box;margin:0;padding:0}
 body{font-family:var(--font-family);background:var(--color-background);color:var(--color-text);line-height:1.6;padding-top:150px}
 
-/* --- HEADER --- */
+/* HEADER */
 header{
-  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
-  background:var(--color-primary);
-  color:var(--color-background);
-  z-index:1000;
+  position:fixed; top:0; left:0; width:100%;
+  background:var(--color-primary); color:var(--color-background); z-index:1000;
   transition:all .3s ease;
-  display:flex;
-  flex-direction:column;
 }
-.logo-container{
-  display:flex;
-  align-items:center; /* centra logo y texto verticalmente */
-  justify-content:center;
-  height:70px;
-  overflow:hidden;
-  transition:all .3s;
-}
+.logo-container{display:flex;align-items:center;justify-content:center;height:70px;overflow:hidden;transition:all .3s}
 .logo-container img{height:50px;margin-right:10px}
-.logo-container h1{font-size:1.8rem;color:#fff; margin:0;}
-.header-hidden .logo-container{
-  height:0;
-  transform:translateY(-100%);
-}
+.logo-container h1{font-size:1.8rem;color:#fff;margin:0;}
+.header-hidden .logo-container{height:0;transform:translateY(-100%)}
 
-/* NAV */
-nav ul{
-  list-style:none;
-  display:flex;
-  justify-content:center;
-  gap:30px;
-  padding:10px 0;
-  flex-wrap:wrap;
+/* NAV unificado para ambas páginas */
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  gap: 30px;      
+  padding: 10px 0; 
+  flex-wrap: wrap;
 }
-nav a{
-  color:var(--color-background);
-  text-decoration:none;
-  font-weight:500;
-  font-size:1rem;
+nav a {
+  color: var(--color-background);
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 1rem;
+  transition: color 0.3s;
 }
-nav a:hover{color:var(--color-accent)}
+nav a:hover { color: var(--color-accent); }
 
 /* MAIN PERFUMES */
 main{padding:40px 20px;max-width:1400px;margin:0 auto;text-align:center}
