--- a/index.html
+++ b/index.html
@@ -24,13 +24,26 @@ header{
 }
 .logo-container{display:flex;align-items:center;justify-content:center;height:70px;overflow:hidden;transition:all .3s}
 .logo-container img{height:50px;margin-right:10px}
-.logo-container h1{font-size:1.8rem}
+.logo-container h1{font-size:1.8rem;color:#fff;margin:0;}
 .header-hidden .logo-container{height:0;transform:translateY(-100%)}
 
-/* NAV */
-nav ul{list-style:none;display:flex;justify-content:center;gap:20px;background:var(--color-primary);padding:10px 0}
-nav a{color:var(--color-background);text-decoration:none;font-weight:500}
-nav a:hover{color:var(--color-accent)}
+/* NAV unificado para ambas páginas */
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  gap: 30px;      /* espacio entre pestañas */
+  padding: 10px 0; /* padding superior e inferior */
+  flex-wrap: wrap;
+}
+nav a {
+  color: var(--color-background);
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 1rem;
+  transition: color 0.3s;
+}
+nav a:hover { color: var(--color-accent); }
 
 /* CARRUSEL */
 .carousel{position:relative;overflow:hidden;margin-top:70px;max-height:900px}
@@ -72,7 +85,7 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
     <ul>
       <li><a href="#inicio" id="homeLink">Inicio</a></li>
       <li><a href="#ropa">Ropa</a></li>
-      <li><a href="perfumes.html">Perfumes</a></li> <!-- va a la página perfumes.html -->
+      <li><a href="perfumes.html">Perfumes</a></li>
       <li><a href="#contacto">Contacto</a></li>
     </ul>
   </nav>
@@ -92,7 +105,7 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
   </div>
 </section>
 
-<!-- Buscador (solo buscará ROPA aquí) -->
+<!-- Buscador (solo ropa aquí) -->
 <div class="search-container">
   <span id="clearBtn">&times;</span>
   <div class="search-bar">
@@ -104,13 +117,11 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
   </div>
 </div>
 
-<!-- ROPA -->
 <section id="ropa">
   <h2>Nuestra Ropa</h2>
   <div class="products" id="ropaProducts"></div>
 </section>
 
-<!-- CONTACTO -->
 <section id="contacto">
   <h2>Contacto</h2>
   <p>Email: contacto@tutienda.com</p>
@@ -122,38 +133,32 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 </footer>
 
 <script>
-/* --- Carrusel simple --- */
+/* --- Carrusel --- */
 const carouselInner = document.querySelector('.carousel-inner');
 const carouselItems = document.querySelectorAll('.carousel-item');
 let slideIndex = 0;
 const video = document.getElementById('videoSlide');
-
 function showNextSlide(){
   slideIndex = (slideIndex + 1) % carouselItems.length;
   carouselInner.style.transform = `translateX(-${slideIndex*100}%)`;
-  // si el slide actual es el video, reproducirlo; si no, pausar
   document.querySelectorAll('.carousel-item video').forEach(v=>{
-    if (carouselItems[slideIndex].contains(v)) v.play();
-    else v.pause();
+    if(carouselItems[slideIndex].contains(v)) v.play(); else v.pause();
   });
 }
-setInterval(showNextSlide, 5000);
+setInterval(showNextSlide,5000);
 
-/* --- Productos (solo ropa para index) --- */
+/* --- Productos --- */
 const ropaProducts = [
   {id:1,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
   {id:2,name:"Pantalón Chino",description:"Cómodo y versátil.",price:"€55.00",image:"https://via.placeholder.com/300x300",keywords:"pantalon chino"},
   {id:3,name:"Vestido Midi Negro",description:"Clásico y versátil.",price:"€80.00",image:"https://via.placeholder.com/300x300",keywords:"vestido midi"},
   {id:4,name:"Jersey de Punto",description:"Suave y cálido.",price:"€55.00",image:"https://via.placeholder.com/300x300",keywords:"jersey punto"}
 ];
-
 function renderRopa(list){
-  const cont = document.getElementById('ropaProducts');
-  cont.innerHTML = '';
+  const cont = document.getElementById('ropaProducts'); cont.innerHTML='';
   (list||ropaProducts).forEach(p=>{
-    const div = document.createElement('div');
-    div.className = 'product';
-    div.innerHTML = `
+    const div=document.createElement('div'); div.className='product';
+    div.innerHTML=`
       <img src="${p.image}" alt="${p.name}">
       <h3>${p.name}</h3>
       <p>${p.description}</p>
@@ -163,25 +168,18 @@ function renderRopa(list){
   });
 }
 
-/* --- Buscador (solo ropa en esta página) --- */
+/* --- Buscador --- */
 const searchInput = document.getElementById('searchInput');
 const clearBtn = document.getElementById('clearBtn');
-
 searchInput.addEventListener('input', ()=>{
   const q = searchInput.value.trim().toLowerCase();
-  if(q){
-    clearBtn.style.display = 'inline-block';
+  if(q){ clearBtn.style.display='inline-block';
     const filtered = ropaProducts.filter(p => p.name.toLowerCase().includes(q) || (p.keywords && p.keywords.toLowerCase().includes(q)) );
     renderRopa(filtered);
-  } else {
-    clearBtn.style.display = 'none';
-    renderRopa();
-  }
+  } else { clearBtn.style.display='none'; renderRopa(); }
 });
 clearBtn.addEventListener('click', ()=>{
-  searchInput.value = '';
-  clearBtn.style.display = 'none';
-  renderRopa();
+  searchInput.value=''; clearBtn.style.display='none'; renderRopa();
 });
 
 /* --- Header hide on scroll --- */
@@ -189,14 +187,13 @@ const header = document.getElementById('mainHeader');
 let lastY = 0;
 window.addEventListener('scroll', ()=>{
   const y = window.pageYOffset || document.documentElement.scrollTop;
-  if(y > lastY && y > 50) header.classList.add('header-hidden'); else header.classList.remove('header-hidden');
-  lastY = y <= 0 ? 0 : y;
+  if(y>lastY && y>50) header.classList.add('header-hidden'); else header.classList.remove('header-hidden');
+  lastY = y<=0?0:y;
 });
 
-/* Inicial */
+/* Inicial render ropa */
 renderRopa();
-// Pausar video por defecto si no está visible al cargar
-document.querySelectorAll('.carousel-item video').forEach(v => { if (!carouselItems[0].contains(v)) v.pause(); });
+document.querySelectorAll('.carousel-item video').forEach(v=>{if(!carouselItems[0].contains(v)) v.pause();});
 </script>
 </body>
 </html>
