--- a/perfumes.html
+++ b/perfumes.html
@@ -18,37 +18,48 @@
 body{font-family:var(--font-family);background:var(--color-background);color:var(--color-text);line-height:1.6;padding-top:150px}
 
 /* HEADER */
-header{
-  position:fixed; top:0; left:0; width:100%;
-  background:var(--color-primary); color:var(--color-background); z-index:1000;
-  transition:all .3s ease;
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: var(--color-primary);
+  color: #fff;
+  z-index: 1000;
+  transition: all 0.3s ease;
 }
-.logo-container{display:flex;align-items:center;justify-content:center;height:70px;overflow:hidden;transition:all .3s}
-.logo-container img{height:50px;margin-right:10px}
-.logo-container h1{font-size:1.8rem;color:#fff;margin:0;}
-.header-hidden .logo-container{height:0;transform:translateY(-100%)}
+.logo-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 70px;
+  overflow: hidden;
+  transition: all 0.3s;
+}
+.logo-container img { height: 50px; margin-right: 10px; }
+.logo-container h1 { font-size: 1.8rem; color: #fff; margin: 0; }
+.header-hidden .logo-container { height: 0; transform: translateY(-100%); }
 
-/* NAV unificado para ambas páginas */
+/* NAV */
 nav ul {
   list-style: none;
   display: flex;
   justify-content: center;
-  gap: 30px;      
-  padding: 10px 0; 
+  gap: 30px;
+  padding: 10px 0;
   flex-wrap: wrap;
 }
 nav a {
-  color: var(--color-background);
+  color: #fff;
   text-decoration: none;
   font-weight: 500;
   font-size: 1rem;
-  transition: color 0.3s;
 }
 nav a:hover { color: var(--color-accent); }
 
 /* MAIN PERFUMES */
-main{padding:40px 20px;max-width:1400px;margin:0 auto;text-align:center}
-h1{margin-bottom:40px;margin-top:0}
+main { padding: 40px 20px; max-width: 1400px; margin: 0 auto; text-align: center; }
+h1 { margin-bottom: 40px; margin-top: 0; }
 
 /* Grid responsivo 5/3/2 */
 .perfumes{
@@ -77,7 +88,7 @@ h1{margin-bottom:40px;margin-top:0}
 .perfume .price{font-weight:bold;margin-top:10px;font-size:1rem;color:#000}
 
 /* FOOTER */
-footer{background:var(--color-primary);color:var(--color-background);text-align:center;padding:15px 10px;margin-top:40px;width:100%}
+footer{background:var(--color-primary);color:#fff;text-align:center;padding:15px 10px;margin-top:40px;width:100%}
 </style>
 </head>
 <body>
